package ca.mcmaster.se2aa4.island.team107;

import java.io.StringReader;
import org.apache.logging.log4j.LogManager;
import org.apache.logging.log4j.Logger;

import eu.ace_design.island.bot.IExplorerRaid;
import org.json.JSONObject;
import org.json.JSONTokener;

public class Explorer implements IExplorerRaid {

    private final Logger logger = LogManager.getLogger();

    private Drone drone;
    private Search gridSearch;
    private Map map;

    @Override
    public void initialize(String s) {
        logger.info("** Initializing the Exploration Command Center");
        JSONObject info = new JSONObject(new JSONTokener(new StringReader(s)));
        logger.info("** Initialization info:\n {}", info.toString(2));
        String direction = info.getString("heading");
        Integer batteryLevel = info.getInt("budget");
        logger.info("The drone is facing {}", direction);
        logger.info("Battery level is {}", batteryLevel);

        this.drone = new Drone(batteryLevel, Direction.fromSymbol(direction));
        this.map = new Map();
        this.gridSearch = new GridSearch(drone, map);

    }

    @Override
    public String takeDecision() {
        // JSONObject decision = new JSONObject();
        // decision.put("action", "stop"); // we stop the exploration immediately
        // logger.info("** Decision: {}", decision.toString());
        // return decision.toString();
        return gridSearch.performSearch();
    }

    @Override
    public void acknowledgeResults(String s) {
        JSONObject response = new JSONObject(new JSONTokener(new StringReader(s)));
        logger.info("** Response received:\n" + response.toString(2));
        // Integer cost = response.getInt("cost");
        // logger.info("The cost of the action was {}", cost);
        // String status = response.getString("status");
        // logger.info("The status of the drone is {}", status);
        // JSONObject extraInfo = response.getJSONObject("extras");
        // logger.info("Additional information received: {}", extraInfo);
        gridSearch.readResponse(response);
    }

    @Override
    public String deliverFinalReport() {
        ((GridSearch) gridSearch).report();
        String result = "no creek found";
        return result;
    }
}
